--- a/_includes/vwo.html
+++ b/_includes/vwo.html
@@ -1,9 +1,1 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134744048-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-134744048-1');
-</script>
+<!-- begin Convert Experiences code--><script type="text/javascript" src="//cdn-3.convertexperiments.com/js/10024968-10024466.js"></script><!-- end Convert Experiences code -->
