--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,7 +4,7 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default;
+$header-bg-color: #ffbf00 !default;
 $header-bg-color-secondary: #ff400 !default;
 
 // Text
